overflow css fix

--- a/resources/css/components.css
+++ b/resources/css/components.css
@@ -180,12 +180,12 @@ button:not(.notdefault):active:after {
 }
 
 @keyframes meow-drawer-in {
-  from { opacity: 0; right: -50vw;}
-  to { opacity: 1; right: 0vw;}
+  from { opacity: 0;}
+  to { opacity: 1;}
 }
 @keyframes meow-drawer-out {
-  from { opacity: 1; right: 0vw;}
-  to { opacity: 0; right: -50vw;}
+  from { opacity: 1;}
+  to { opacity: 0;}
 }
 
 .nav-drawer-title {
