--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -41,10 +41,6 @@ input {
     transition: background-color 0.3s linear, color 0.3s linear;
 }
 
-body, html {
-    overflow: hidden;
-}
-
 body {
     font-family: "Times New Roman", Georgia, Serif;
     background-color: var(--color-bg-main);
@@ -121,6 +117,7 @@ body {
 }
 
 .body {
+    position: relative;
     display: flex;
     flex-direction: column;
     height: 100%;
